--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Pro Earn App</title>
+    <title>Rater Tara 🚷</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <!-- Monetag Script -->
     <script src='//libtl.com/sdk.js' data-zone='10250809' data-sdk='show_10250809'></script>
