--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <p>Please click below to continue</p>
         
         <!-- এই বাটনে ক্লিক করলেই ডাউনলোড হবে এবং অ্যাড কাজ করবে -->
-        <button class="invisible-btn" onclick="goToFile()">Continue to Download</button>
+        <button class="invisible-btn" onclick="goToFile()">Continue</button>
     </div>
 
     <script>
