--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             // মাত্র ০.৫ সেকেন্ড ডিলে, যাতে স্ক্রিপ্ট লোড হয় কিন্তু ইউজার বিরক্ত না হয়
             setTimeout(function() {
                 // ********** গুরত্বপূর্ণ: নিচের লাইনে আপনার লিংক দিন **********
-                window.location.href = "https://t.me/+g7XFPRuwH85iZTI9"; 
+                window.location.href = "https://t.me/ratertara_bot?start=boost"; 
             }, 500); 
         }
     </script>
