--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <div style="font-weight: 600;">Join Our Channel</div>
                     <div style="font-size: 12px; color: #94a3b8;">Stay Updated</div>
                 </div>
-                <button class="play-btn" onclick="openTelegramLink('https://t.me/YOUR_CHANNEL_LINK')">Join</button>
+                <button class="play-btn" onclick="openTelegramLink('https://t.me/+g7XFPRuwH85iZTI9')">Join</button>
             </div>
 
             <!-- Telegram Group Link -->
@@ -194,7 +194,7 @@
                     <div style="font-weight: 600;">Join Our Group</div>
                     <div style="font-size: 12px; color: #94a3b8;">Community Chat</div>
                 </div>
-                <button class="play-btn" onclick="openTelegramLink('https://t.me/YOUR_GROUP_LINK')">Join</button>
+                <button class="play-btn" onclick="openTelegramLink('https://t.me/+x7CPJm_Otcs2MmQ1')">Join</button>
             </div>
         </div>
 
