--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
+
+<script
+  type="text/javascript"
+  src="//pl28030591.effectivegatecpm.com/58/67/e1/5867e18023cf6a8b2d757323591ba74f.js"
+></script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Rater Tara 🚷</title>
@@ -403,5 +409,11 @@
             })
         }
     </script>
+
+<script
+  type="text/javascript"
+  src="//pl28030600.effectivegatecpm.com/3a/39/2e/3a392ef12ec9411fdf1fcc8c22f2cc9d.js"
+></script>
+
 </body>
 </html>
