--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@
 </head>
 <body>
 
+<script
+  async="async"
+  data-cfasync="false"
+  src="//pl28213555.effectivegatecpm.com/51246ba2e0f7773d3c8b96e5f2a51a36/invoke.js"
+></script>
+
+<div id="container-51246ba2e0f7773d3c8b96e5f2a51a36"></div>
     <!-- AUTH MODAL -->
     <div id="authModal" class="modal">
         <div class="auth-card">
