--- a/index.html
+++ b/index.html
@@ -101,10 +101,18 @@
 </head>
 <body>
 
+<script type="text/javascript">
+  atOptions = {
+  	'key' : '73aebbc5e096d89876e20d14b6465650',
+  	'format' : 'iframe',
+  	'height' : 50,
+  	'width' : 320,
+  	'params' : {}
+  };
+</script>
 <script
-  async="async"
-  data-cfasync="false"
-  src="//pl28213555.effectivegatecpm.com/51246ba2e0f7773d3c8b96e5f2a51a36/invoke.js"
+  type="text/javascript"
+  src="//www.highperformanceformat.com/73aebbc5e096d89876e20d14b6465650/invoke.js"
 ></script>
 
 <div id="container-51246ba2e0f7773d3c8b96e5f2a51a36"></div>
