--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RATER TARA Bot</title>
+    <title>Live Chat</title>
     <style>
         /* বেসিক ডিজাইন */
         body {
@@ -161,7 +161,7 @@
 
     // অটো রিপ্লাই মেসেজ
     const autoReplyText = `
-        Welcome to <b>𝐑𝐀𝐓𝐄𝐑 𝐓𝐀𝐑𝐀 Bot 🔥</b><br>
+        Welcome to <b>𝐑𝐀𝐓𝐄𝐑 𝐓𝐀𝐑𝐀 🔥</b><br>
         💎 ভাইরাল প্রিমিয়াম কনটেন্টের একমাত্র নির্ভরযোগ্য জায়গা!<br><br>
         এখানে পাচ্ছেন একদম ফ্রি + প্রিমিয়াম এক্সক্লুসিভ অ্যাক্সেস 👇<br>
         ✨ ট্রেন্ডিং ভাইরাল ভিডিও<br>
