--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         ধন্যবাদ আমাদের সাথে থাকার জন্য! <br>
         ━━━━━━━━━━━━━━<br>
         🖇️ সব ভাইরাল ভিডিও দেখতে জয়েন করুন:<br>
-        <a href="https://t.me/VairalNadiya" target="_blank">@VairalNadiya</a>
+        <a href="https://t.me/ratertara_bot?startgroup=true" target="_blank">@ratertara_bot</a>
     `;
 
     let hasWelcomed = false;
