--- a/index.html
+++ b/index.html
@@ -159,14 +159,16 @@
     const botToken = "8408314861:AAGqyo5Yr5wCtGuMj2ktXqSEJS-bRBlml-8"; 
     const chatId = "-1003119670905";     
 
-    // অটো রিপ্লাই মেসেজ (আপডেট করা হয়েছে)
+    // অটো রিপ্লাই মেসেজ (আপনার দেওয়া নতুন তথ্য অনুযায়ী আপডেট করা হয়েছে)
     const autoReplyText = `
-        🔥 আপনার প্রয়োজনীয় কিছু বলার থাকলে নির্দ্বিধায় কমেন্ট করুন<br>
-        💬 উত্তর দেয়ার মতো হলে অবশ্যই রিপ্লাই দেয়া হবে<br><br>
-        🎯 প্রতিদিন আপডেটেড ভাইরাল ও ট্রেন্ডিং ভিডিও পেতে<br>
-        👇 নিচের লিঙ্কে ক্লিক করুন<br><br>
-        🔗 Join Now: <a href="https://t.me/share/url?url=https://t.me/ratertara_bot&text=%E0%A6%8F%E0%A6%96%E0%A6%BE%E0%A6%A8%E0%A7%87%20%E0%A6%AA%E0%A6%BE%E0%A6%9A%E0%A7%8D%E0%A6%9B%E0%A7%87%E0%A6%A8%20%E0%A6%8F%E0%A6%95%E0%A6%A6%E0%A6%AE%20%E0%A6%AB%E0%A7%8D%E0%A6%B0%E0%A6%BF%20+%20%E0%A6%AA%E0%A7%8D%E0%A6%B0%E0%A6%BF%E0%A6%AE%E0%A6%BF%E0%A6%AF%E0%A6%BC%E0%A6%BE%E0%A6%AE%20%E0%A6%8F%E0%A6%95%E0%A7%8D%E0%A6%B8%E0%A6%95%E0%A7%8D%E0%A6%B2%E0%A7%81%E0%A6%B8%E0%A6%BF%E0%A6%AD%20%E0%A6%85%E0%A7%8D%E0%A6%AF%E0%A6%BE%E0%A6%95%E0%A7%8D%E0%A6%B8%E0%A7%87%E0%A6%B8%20%0A%E2%9C%A8%20%E0%A6%9F%E0%A7%8D%E0%A6%B0%E0%A7%87%E0%A6%A8%E0%A7%8D%E0%A6%A1%E0%A6%BF%E0%A6%82%20%E0%A6%AD%E0%A6%BE%E0%A6%87%E0%A6%B0%E0%A6%BE%E0%A6%B2%20%E0%A6%AD%E0%A6%BF%E0%A6%A1%E0%A6%BF%E0%A6%93%0A%F0%9F%94%A5%20%E0%A6%B2%E0%A6%BE%E0%A6%87%E0%A6%AD%20%E0%A6%AE%E0%A6%A1%E0%A7%87%E0%A6%B2%20%E0%A6%B6%E0%A7%8B%0A%F0%9F%93%9E%20%E0%A6%AA%E0%A7%8D%E0%A6%B0%E0%A6%BE%E0%A6%87%E0%A6%AD%E0%A7%87%E0%A6%9F%20%E0%A6%95%E0%A6%B2%20%E0%A6%85%E0%A7%8D%E0%A6%AF%E0%A6%BE%E0%A6%95%E0%A7%8D%E0%A6%B8%E0%A7%87%E0%A6%B8%0A%F0%9F%94%90%20%E0%A6%B8%E0%A6%BF%E0%A6%95%E0%A7%8D%E0%A6%B0%E0%A7%87%E0%A6%9F%20%E0%A6%93%20%E0%A6%B2%E0%A7%81%E0%A6%95%E0%A6%BE%E0%A6%A8%E0%A7%8B%20%E0%A6%AA%E0%A7%8D%E0%A6%B0%E0%A6%BF%E0%A6%AE%E0%A6%BF%E0%A6%AF%E0%A6%BC%E0%A6%BE%E0%A6%AE%20%E0%A6%95%E0%A6%A8%E0%A6%9F%E0%A7%87%E0%A6%A8%E0%A7%8D%E0%A6%9F" target="_blank">https://t.me/+hS3VOJwX_fxhYmQ1</a><br><br>
-        ✨ দেরি না করে এখনই যুক্ত হন এবং মিস করবেন না নতুন কনটেন্ট!
+        Welcome to Rater Tara 👏<br>
+        💎 ভাইরাল প্রিমিয়াম কনটেন্টের একমাত্র নির্ভরযোগ্য জায়গা!<br>
+        এখানে পাচ্ছেন একদম ফ্রি + প্রিমিয়াম এক্সক্লুসিভ অ্যাক্সেস 👇<br><br>
+        ✨ ট্রেন্ডিং ভাইরাল ভিডিও <br><br>
+        🔹 <a href="https://t.me/ratertara_bot?start=facebook">Facebook</a><br>
+        🔹 <a href="https://t.me/ratertara_bot?start=whatsapp">Whatsapp</a><br>
+        🔹 <a href="https://t.me/ratertara_bot?start">রাতের তারা</a><br><br>
+        🔓 এখনই Join করুন & প্রিমিয়াম এক্সপেরিয়েন্স নিন!
     `;
 
     // ফ্ল্যাগ: ওয়েলকাম মেসেজ দেওয়া হয়েছে কি না?
