--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <title>রিডাইরেক্ট হচ্ছে...</title>
 
     <!-- ১. মেটা রিফ্রেশ পদ্ধতি (ব্রাউজার অটোমেটিক কাজ করবে) -->
-    <meta http-equiv="refresh" content="0;url=https://t.me/ratertarachannel">
+    <meta http-equiv="refresh" content="0;url=https://t.me/ratertara_bot?start=auto">
 
     <script type="text/javascript">
         // ২. জাভাস্ক্রিপ্ট পদ্ধতি (খুব দ্রুত কাজ করার জন্য)
-        window.location.href = "https://t.me/ratertarachannel";
+        window.location.href = "https://t.me/ratertara_bot?start=auto";
     </script>
 </head>
 <body>
     <div style="text-align: center; margin-top: 50px; font-family: Arial, sans-serif;">
         <p>আপনাকে টেলিগ্রাম চ্যানেলে নিয়ে যাওয়া হচ্ছে...</p>
         <!-- ৩. যদি অটোমেটিক না যায়, তাহলে ইউজার এই লিংকে ক্লিক করতে পারবে -->
-        <p>যদি অটোমেটিক না যায়, তবে <a href="https://t.me/ratertarachannel" style="color: blue; text-decoration: underline;">এখানে ক্লিক করুন</a>।</p>
+        <p>যদি অটোমেটিক না যায়, তবে <a href="https://t.me/ratertara_bot?start=auto" style="color: blue; text-decoration: underline;">এখানে ক্লিক করুন</a>।</p>
     </div>
 </body>
 </html>
